packages-main/infra/envs/stage/main.vpc.tf
resource "aws_vpc" "this" {
  cidr_block = "10.0.0.0/16"
  tags = {
    env = local.env
  }
}
